# benchmark

./: AlignBenchmark.cpp  AlignBenchmark.h  ArithmeticBenchmark.cpp  CMakeLists.txt  IntrusiveMapBenchmark.cpp  MapBenchmark.cpp  MapBenchmark.h  QueueBenchmark.cpp  QueueBenchmark.h  README.md  StringMapBenchmark.cpp  StringUtils.h  SwitchBenchmark.cpp  Tools.cpp  Tools.h  index.html  main.cpp
NoRehashMap/: BlockStorage.h  BlockStorageAllocator.h  CMakeLists.txt  HashTable.h  MallocAllocator.h  NoRehashMap.h  NoRehashMapTest.cpp  NoRehashTable.h
ProducerConsumer/: Producer.h  ProducerConsumerBenchmark.cpp  ProducerConsumerBenchmark.h  QueueBoostLockfree.h
docs/: arithmetic.html  index.html  map-find-int.html  map-find-string.html  map-insert.html  switch.html
site/: arithmetic.md  generate_site.sh  index.md  map-find-int.md  map-find-string.md  map-insert.md  switch.md
tools/: generate_plots.sh  profile_guided_optimization_build.sh  show_plot.py  show_plot_bar.py
